fixing the hamburger alignment

--- a/decisiontree/styles/base.css
+++ b/decisiontree/styles/base.css
@@ -362,10 +362,10 @@ footer {
         cursor: pointer;
         display: block;
         font-size: 2rem;
-        padding: 0.2rem 2vw;
+        padding: .2rem 2vw;
         position: absolute;
-        right: 35px;
-        top: 15px;
+        right: 2.2rem;
+        top: 1.1rem;
         text-align: right;
     }
 
